@@ -1,3 +1,7 @@
+Tue  Sep 7  2004	H. Wade Minter (minter@lunenburg.org)
+     * Fixed a bug in the "Select new location for DB file" dialog in
+       Preferences.
+
 Mon  Sep 6  2004	H. Wade Minter (minter@lunenburg.org)
      * Happy birthday to me!
      * Added support for AAC files (.m4a, .mp4) via the MP4::Info module.
